fix: changed 'build' tag to 'application' tag
Since the cepad-worker has both build and deployment tasks. So,
because the role has both building and execution of the application,
I renamed it to 'application'.

--- a/ansible/cepad.yml
+++ b/ansible/cepad.yml
@@ -5,4 +5,4 @@
   roles:
     - { role: prepare-node, tags: ['configuration'] }
     - { role: git-clone-module, tags: ['configuration'] }
-    - { role: cepad-worker, tags: ['build'] }
+    - { role: cepad-worker, tags: ['application'] }
